# full-stack-mobile-demo

./: .gitignore  .npmrc  AGENTS.md  AGENTS_CHANGELOG.md  AgentMD_Change_Log.md  Makefile  README.md  TODOS.md  e2e.m4a  package.json  pnpm-lock.yaml  smoke-plan.yml  smoke.config.json  tsconfig.base.json  vitest.config.ts
.maestro/: android-smoke.yaml  canonical-flow.yaml  ios-smoke.yaml  voice-notes-smoke.yaml
.storybook/: main.ts
android/: Gemfile  README.md
app/: app.json  package.json  sign-in.tsx
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: auth.py  debug.py  notes_create.py  notes_detail.py  notes_list.py
backend/src/exceptions/: errors.py
backend/src/logging/: logger.py
backend/src/models/: db.py
backend/src/services/: auth.py  database.py  note_creation.py  note_detail.py  note_listing.py  processing_results.py  retry_processing.py
backend/src/settings/: config.py
backend/src/workers/: notes.py  state_transitions.py
backend/tests/: conftest.py  test_create_upload_flow.py  test_note_detail_retry.py  test_note_list_status.py  test_smoke_worker_flow.py
docs/: ci-guardrails.md
issuelog/: 003-fastlane-apk-export-ci.md  2026-03-23-e2e-auth-and-maestro-mismatch.md  2026-03-23-expo-go-router-root-mismatch.md  2026-03-23-ios-smoke-reactcodegen-missing-componentdescriptors.md  2026-03-23-specify-plan-prefix-conflict.md  2026-03-23-storybook-chromatic-blocker.md  2026-03-23-validation-import-and-tooling.md  2026-03-24-uv-sandbox-import-smoke.md  2026-03-30-smoke-kit-ci-pipeline-fixes.md  fastlane_path_fix.md
(+98 files in other folders)
