[project]
name = "voice-notes-backend"
version = "0.1.0"
description = "FastAPI backend for the voice notes summary demo."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "email-validator>=2.2.0",
  "pydantic>=2.11.1",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
testpaths = ["tests"]
